[package]
name = "create_snapshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive", "env"] }
env_logger = "0.9.0"
log = "0.4.17"
solana-ledger = "=1.11.7"
solana-runtime = "=1.11.7"
solana-program = "=1.11.7"
solana-sdk = "=1.11.7"
