[package]
name = "tip-distribution"
version = "0.1.0"
description = "Tip distribution program, responsible for distributing funds to entitled parties."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tip_distribution"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/jito-labs/anchor.git",  rev = "06163348640179c031672829e204b99139945d04" }
solana-program = "~1.11.6"
