[package]
name = "tip-payment"
version = "0.1.0"
description = "Tip Payment Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tip_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = { git = "https://github.com/jito-labs/anchor.git",  rev = "06163348640179c031672829e204b99139945d04" }
